--- a/serverless.yml
+++ b/serverless.yml
@@ -1,11 +1,11 @@
-service: my-store-app
+service: shop-react-redux-cloudfront
 
 frameworkVersion: "3"
 
 provider:
   name: aws
   runtime: nodejs14.x
-  region: eu-west-1
+  region: us-east-1
   # setup profile for AWS CLI.
   # profile: node-aws
 
@@ -19,7 +19,7 @@ plugins:
 
 custom:
   client:
-    bucketName: my-store-app
+    bucketName: shop-react-cloudfront-aa
     distributionFolder: dist
   s3BucketName: ${self:custom.client.bucketName}
 
